media/css/cms/flare26-download-link.css
/*
* This Source Code Form is subject to the terms of the Mozilla Public
* License, v. 2.0. If a copy of the MPL was not distributed with this
* file, You can obtain one at https://mozilla.org/MPL/2.0/.
*/

/* ================================================
   Download Links
   ================================================ */

.fl-firefox-platform-button {
    align-items: center;
    display: flex;
    flex-direction: column;
    gap: var(--token-spacing-lg);
    justify-content: center;
}

.fl-firefox-platform-button .fl-button {
    inline-size: fit-content;
}

.fl-download-firefox-button .fl-store-button {
    display: none;
}

html.android .fl-download-firefox-button:has(.fl-store-button) .download-link,
html.ios .fl-download-firefox-button:has(.fl-store-button) .download-link {
    display: none;
}

html.android
    .fl-download-firefox-button
    .fl-store-button.fl-store-button-android {
    display: block;
}

html.ios .fl-download-firefox-button .fl-store-button.fl-store-button-ios {
    display: block;
}

.fl-store-button {
    display: block;
}

.fl-store-button img {
    margin: 0;
    min-block-size: 45px;
}

.fl-download-firefox-button {
    align-items: center;
    display: inline-flex;
    flex-direction: column;
    gap: 16px;
}

/* download as default checkbox label */
.fl-download-firefox-button .default-browser-label {
    align-items: center;
    display: flex;
    gap: 12px;
    justify-content: flex-start;
}

.fl-privacy-link {
    font-size: var(--fl-theme-font-size-body-xs);
}

.fl-header .mzp-c-button-download-privacy-link,
.fl-header .fx-unsupported-message,
.fl-header .fl-privacy-link {
    display: none !important; /* stylelint-disable-line */
    margin: 0;
}

.fl-header .download-link {
    display: block;
    font-weight: var(--token-font-weight-bold);
    text-align: center;
}

.fl-header .download-link:hover {
    text-decoration: none;
}

.fl-header .fl-icon-download-white {
    margin-inline-start: 4px;
    vertical-align: unset;
}

.fl-nav-mobile-download-link {
    background: var(--fl-theme-background);
    inline-size: 100%;
    inset-block-end: 0;
    inset-inline-start: 0;
    padding: var(--token-spacing-lg) var(--token-spacing-xl);
    position: fixed;
}

.fl-nav-mobile-download-link .fl-download-firefox-button {
    display: block;
}

.fl-nav-mobile-download-link .download-button {
    display: block;
    inline-size: 100%;
    padding: var(--token-spacing-md);
}

@media (--viewport-below-md) {
    .fl-header .fl-header-main-download-button .download-link {
        border-radius: var(--token-spacing-sm);
        font-size: 0;
        padding: var(--token-spacing-sm);
    }

    .fl-header
        .fl-nav.is-open
        ~ .fl-header-buttons
        .fl-header-main-download-button {
        display: none;
    }
}

@media (--viewport-md-up) {
    .fl-header-main-download-button .fl-icon {
        display: none;
    }
}

@media screen and (prefers-color-scheme: dark) {
    .fl-nav-mobile-download-link {
        border-color: var(--token-color-purple);
    }
}

